--- a/frontend/menu.html
+++ b/frontend/menu.html
@@ -3,23 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menú Digital | Restaurante Elegante</title>
+    <title>Menú Digital | CORRALES RESTAURANT</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="app-container">
         <!-- Header Elegante -->
-        <header class="header">
-            <div class="logo">
-                <i class="fas fa-utensils"></i>
-                <span>RESTAURANTE ELEGANTE</span>
-            </div>
-            <div class="mesa-info">
-                <i class="fas fa-table"></i>
-                <span id="mesa-numero">MESA-01</span>
-            </div>
-        </header>
+       <!-- Cambia esta línea -->
+<div class="logo">
+    <i class="fas fa-utensils"></i>
+    <span>CORRALES RESTAURANT</span>
+</div>
 
         <!-- Selector Tipo Pedido -->
         <section class="selector-tipo">
